--- a/Views/Categorias/Create.cshtml
+++ b/Views/Categorias/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Ecommerce.Models.Categoria
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar Categoria";
 }
 
-<h1>Create</h1>
+<h1>Cadastrar Categoria</h1>
 
-<h4>Categoria</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +17,14 @@
                 <span asp-validation-for="NomeCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para listagem</a>
 </div>
 
 @section Scripts {
