--- a/Views/Categorias/Delete.cshtml
+++ b/Views/Categorias/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Ecommerce.Models.Categoria
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Categoria";
 }
 
-<h1>Delete</h1>
+<h1>Excluir Categoria</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir esta categoria?</h3>
 <div>
     <h4>Categoria</h4>
     <hr />
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar para listagem</a>
     </form>
 </div>
