--- a/Views/Categorias/Details.cshtml
+++ b/Views/Categorias/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Ecommerce.Models.Categoria
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes da Categoria";
 }
 
-<h1>Details</h1>
+<h1>Detalhes da Categoria</h1>
 
 <div>
-    <h4>Categoria</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,6 +18,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar para listagem</a>
 </div>
