--- a/Views/Compras/Delete.cshtml
+++ b/Views/Compras/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Ecommerce.Models.Compra
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Compra";
 }
 
-<h1>Delete</h1>
+<h1>Excluir</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir esta compra?</h3>
 <div>
-    <h4>Compra</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,19 +26,19 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.Id)
+            @Html.DisplayFor(model => model.Cliente.Nome)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.Id)
+            @Html.DisplayFor(model => model.Produto.NomeProduto)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar para listagem</a>
     </form>
 </div>
