--- a/Views/Compras/Details.cshtml
+++ b/Views/Compras/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Ecommerce.Models.Compra
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes da Compra";
 }
 
-<h1>Details</h1>
+<h1>Detalhes da Compra</h1>
 
 <div>
-    <h4>Compra</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -26,17 +25,17 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.Id)
+            @Html.DisplayFor(model => model.Cliente.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.Id)
+            @Html.DisplayFor(model => model.Produto.NomeProduto)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar para listagem</a>
 </div>
