--- a/Views/Produtos/Create.cshtml
+++ b/Views/Produtos/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Ecommerce.Models.Produto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastrar Produto";
 }
 
-<h1>Create</h1>
+<h1>Cadastrar Produto</h1>
 
-<h4>Produto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,14 +31,14 @@
                 <select asp-for="CategoriaId" class ="form-control" asp-items="ViewBag.CategoriaId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para listagem</a>
 </div>
 
 @section Scripts {
