--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Ecommerce
+             Feito por: Gabrielle Azevedo, Maria Júlia Carvalho, Romulo Lima - Código no GitHub!
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
